[gd_scene load_steps=5 format=2]

[ext_resource path="res://Imagens/seta-para-baixo.png" type="Texture" id=1]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Setas.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 411.0
margin_bottom = 807.0
color = Color( 0.701961, 0.968627, 0.937255, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 0.470588, 0.439216, 0.690196, 1 )
margin_left = 74.0
margin_top = 438.0
margin_right = 344.0
margin_bottom = 502.0

[node name="buttonDown" type="Button" parent="."]
margin_left = 216.0
margin_top = 452.0
margin_right = 740.0
margin_bottom = 970.0
rect_scale = Vector2( 0.0799978, 0.0799978 )
icon = ExtResource( 1 )
flat = true

[node name="buttonLeft" type="Button" parent="."]
anchor_right = 0.031
margin_left = 124.0
margin_top = 450.0
margin_right = 648.0
margin_bottom = 968.0
rect_rotation = 90.0
rect_scale = Vector2( 0.079999, 0.079999 )
icon = ExtResource( 1 )
flat = true

[node name="buttonUp" type="Button" parent="."]
margin_left = 192.0
margin_top = 492.0
margin_right = 716.0
margin_bottom = 1010.0
rect_rotation = 180.0
rect_scale = Vector2( 0.079999, 0.079999 )
icon = ExtResource( 1 )
flat = true

[node name="button" type="Button" parent="."]
margin_left = 293.0
margin_top = 495.0
margin_right = 817.0
margin_bottom = 1013.0
rect_rotation = 270.0
rect_scale = Vector2( 0.0799953, 0.0799953 )
icon = ExtResource( 1 )
flat = true

[node name="Label" type="Label" parent="."]
modulate = Color( 0.0588235, 0.0509804, 0.0509804, 1 )
margin_left = 34.0
margin_top = 141.0
margin_right = 150.0
margin_bottom = 211.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
text = " "

[node name="Button" type="Button" parent="."]
modulate = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
margin_left = 23.0
margin_top = 33.0
margin_right = 72.0
margin_bottom = 53.0
text = "Voltar"
flat = true

[connection signal="pressed" from="buttonDown" to="." method="_on_buttonDown_pressed"]
[connection signal="pressed" from="buttonLeft" to="." method="_on_buttonLeft_pressed"]
[connection signal="pressed" from="buttonUp" to="." method="_on_buttonUp_pressed"]
[connection signal="pressed" from="button" to="." method="_on_ButtonRight_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
